# mcp-style-agent

./: .gitignore  BUGFIX_FOR_EACH.md  Dockerfile  LICENSE  Makefile  README.md  debug_db.py  debug_template.py  docker-compose.yml  mcp_tools_test_results.json  pyproject.toml  test_template_simple.py
.kiro/steering/: product.md  structure.md  tech.md
basic_integration_results/: basic_integration_report.txt  basic_integration_results.json
config/: flows.yaml  mcp_server.yaml  system.yaml
config/flows/: debate_flow.yaml
docs/: BACKGROUND.md  DeepThinking.md  README.md
docs/deployment/: README.md
docs/developer/: README.md  api-reference.md  architecture.md  contributing.md
docs/drafts/: BACKGROUND.md  Cognitive.md
docs/user-guide/: README.md  configuration.md  thinking-flows.md  troubleshooting.md
examples/: core_interfaces_demo.py
release_preparation_results/: release_preparation_report.txt  release_preparation_results.json
scripts/: basic_integration_test.py  deploy.sh  minimal_integration_test.py  minimal_system_integration_test.py  run_complete_system_integration.py  run_integration_tests.py  standalone_integration_test.py  start_mcp_server.py  system_release_preparation.py  test_integration_framework.py  test_template_effects.py  test_uvx_deployment.py  user_experience_test.py
src/: __init__.py
src/mcps/: __init__.py
templates/: advanced_critical_evaluation.tmpl  bias_detection.tmpl  comprehensive_evidence_collection.tmpl  comprehensive_summary.tmpl  critical_evaluation.tmpl  flow_completion.tmpl  innovation.tmpl  reflection.tmpl
tests/: test_final_verification.py  test_for_each_fix.py  test_for_each_simple.py  test_hardcoded_flows.py  test_integration.py  test_system_integration.py
ux_test_results/: ux_test_report.txt  ux_test_results.json
(+786 files in other folders)
